# school_menu

./: .beans.yml  .env.dev  .env.example  .envrc  .gitignore  .pre-commit-config.yaml  .pymon  CLAUDE.md  Dockerfile  Procfile  README.md  Taskfile.yml  bun.lockb  conftest.py  entrypoint.sh  justfile  package.json  pyproject.toml  requirements-dev.txt  requirements.txt  runserver.sh  tailwind.config.js
.beans/: school_menu-35ax--performance-optimization-monitoring.md  school_menu-8jn8--create-utilsmealspy-module.md  school_menu-brc4--fase-4-integration-audit-deprecation.md  school_menu-chjb--fase-1-foundation-audit-log-csp.md  school_menu-d6fm--run-tests-and-verify-coverage.md  school_menu-dl6a--create-utilscsv-importpy-module.md  school_menu-ensi--add-type-hints-to-views-and-tasks.md  school_menu-epqh--cleanup-and-finalize-refactoring.md  school_menu-izm5--code-quality-refactoring-quick-wins.md  school_menu-j8h7--type-safety-architecture-refactoring.md  school_menu-lgmd--update-imports-across-codebase.md  school_menu-m76r--fase-3-security-csp-headers.md  school_menu-n41g--create-utils-package-structure.md  school_menu-oevx--api-standardization-security-hardening.md  school_menu-ow4m--create-utilscalendarpy-module.md  school_menu-snbp--create-utilsnotificationspy-module.md  school_menu-utfe--fase-2-api-v1-drf-viewsets.md  school_menu-vjo0--type-safety-improvements-and-utils-refactoring-208.md
.claude/: settings.local.json
.claude/agents/: issue-creator.md
.github/: copilot-instructions.md
.github/workflows/: tests.yaml
contacts/: admin.py  apps.py  forms.py  models.py  urls.py  views.py
contacts/migrations/: 0001_initial.py  0002_alter_menureport_receiver.py  0002_delete_contact.py  0003_initial.py
core/: middleware.py  settings.py  tasks.py  urls.py
core/settings/: common.py  dev.py  development.py  prod.py  production.py  test.py
data/: menu_scuola.csv  menu_scuola_old.csv
data/cesano_boscone/: menu_inv_asilo_cesanoboscone.csv
data/csv_test_files/: 01_unclosed_quotes.csv  02_missing_required_columns.csv  03_wrong_day_names.csv  04_wrong_week_numbers.csv  05_extra_trailing_columns.csv  06_mixed_delimiters.csv  07_tab_delimiter.csv  08_non_integer_week.csv  09_annual_malformed_dates.csv  11_only_headers.csv  12_whitespace_columns.csv  13_single_quotes.csv  14_detailed_semicolon_good.csv  15_quoted_with_commas_good.csv  16_extra_columns_should_work.csv  17_bom_encoding.csv  18_annual_good.csv  19_simple_instead_of_detailed.csv  20_detailed_instead_of_simple.csv  22_weekly_instead_of_annual_simple.csv  23_weekly_instead_of_annual_detailed.csv  README.md
data/firenze/: FirenzeMenuOrdinario2425.csv  FirenzeMenuOrdinario2526.csv
django_scheduled_backups/: README.md  __init__.py  admin.py  apps.py  conf.py  models.py  tasks.py
django_scheduled_backups/migrations/: 0001_initial.py
notifications/: admin.py  forms.py  models.py  tasks.py  urls.py  utils.py  views.py
notifications/migrations/: 0001_initial.py  0002_anonymousmenunotification_daily_notification.py  0003_anonymousmenunotification_notification_time_and_more.py  0004_alter_anonymousmenunotification_notification_time.py  0005_alter_anonymousmenunotification_daily_notification.py  0006_anonymousmenunotification_subscription_endpoint.py  0007_broadcastnotification.py
school_menu/: admin.py  apps.py  cache.py  constants.py  forms.py  models.py  resources.py  serializers.py  test.py  urls.py  utils.py  views.py
school_menu/api/: __init__.py  exceptions.py  pagination.py  viewsets.py
school_menu/migrations/: 0001_initial.py  0002_alter_meal_day_alter_meal_season_alter_meal_week_and_more.py  0002_initial.py  0002_rename_schools_school.py  0003_meal_type.py  0003_remove_settings_school_settings_user.py  0003_school_season_choice_school_week_bias_and_more.py  0004_school_menu_type.py  0004_settings.py  0005_alter_settings_options_settings_week_bias_and_more.py  0005_alter_simplemeal_menu.py  0006_alter_meal_type.py  0006_alter_school_season_choice.py  0007_simplemeal_snack.py  0008_alter_school_season_choice.py  0009_school_is_published.py  0010_remove_simplemeal_snack_simplemeal_afternoon_snack_and_more.py  0011_alter_simplemeal_afternoon_snack_and_more.py  0012_school_no_gluten_school_no_lactose_school_special_and_more.py  0013_alter_detailedmeal_type_alter_simplemeal_type.py  0014_detailedmeal_date_school_annual_menu_simplemeal_date.py  0015_alter_detailedmeal_season_alter_simplemeal_season.py  0016_remove_detailedmeal_date_remove_simplemeal_date_and_more.py  0017_alter_annualmeal_options.py  0018_annualmeal_is_active.py  0019_school_end_day_school_end_month_school_start_day_and_more.py  0020_annualmeal_annual_sch_date_active_and_more.py  0021_alter_detailedmeal_first_course_and_more.py  0022_auditlog.py
school_menu/templatetags/: custom_tailwind.py  filters.py  settings_tags.py  truncate_filter.py
school_menu/utils/: __init__.py  calendar.py  csv_import.py  meals.py  notifications.py
scripts/: dev_server.py  populate_menu.py
src/: source.css
static/: site.webmanifest
static/css/: bootstrap.min.css.map  custom.css  main.min.css  main.min.css.map  tailwind.css
static/files/: EsempioMenuDettagliato.csv  (+5 more)
static/js/: custom.js  (+6 more)
templates/: 404.html  500.html  base-simplified.html  base.html  create-weekly-menu.html  export-menu.html  index.html  offline.html  school-list.html  school-menu.html  settings.html  upload-menu.html
users/: admin.py  forms.py  managers.py  models.py
utils/: init.sh
(+134 files in other folders)
