[project]
name = "school_menu"
version = "0.3"
requires-python = ">= 3.12"
dependencies = [
    "crispy-tailwind",
    "django <5.1",
    "django-allauth",
    "django-anymail[mailgun]",
    "django-browser-reload",
    "django-crispy-forms",
    "django-dbbackup",
    "django-debug-toolbar",
    "django-environ",
    "django-import-export",
    "django_htmx",
    "django-q2",
    "django-storages",
    "django-template-partials",
    "dropbox",
    "heroicons[django]",
    "factory_boy",
    "gunicorn",
    "neapolitan",
    "pandas",
    "openpyxl",
    "psycopg[binary]",
    "whitenoise",
]

[project.optional-dependencies]
dev = [
    "coverage",
    "django-extensions",
    "django-test-plus",
    "djlint",
    "pre-commit",
    "pywatchman",
    "pytest",
    "pytest-cov",
    "pytest-django",
    "pytest-factoryboy",
    "pytest-xdist",
    "ruff",
]

[tool.bandit]
skips = ["B101","B311"]


[tool.ruff]
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "B", "I"]
ignore = ["E501", "E741", "F405", "B007"]


[tool.djlint]
ignore="T002,H006"

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "core.settings.test"
python_files = "test_*.py"
testpaths = ["tests"]
'addopts' = "--nomigrations --cov=school_menu --cov-report html:htmlcov --cov-report term:skip-covered --cov-fail-under 100"
[tool.coverage.run]
branch = true
omit = ['*/.venv/*', '*/migrations/*', '*/tests/*', '*/test_*.py', '*/settings/*', '*/wsgi.py', '*/asgi.py', '*/manage.py', '*/core/*', '*/users/*', "school_menu/resources.py", "school_menu/serializers.py"]

[tool.coverage.report]
exclude_also = [
]
