[project]
dependencies = [
  "crispy-tailwind",
  "django <5.1",
  "django-allauth",
  "django-anymail[mailgun]",
  "django-browser-reload",
  'django-cookiebanner',
  "django-crispy-forms",
  "django-dbbackup",
  "django-debug-toolbar",
  "django-environ",
  "django-import-export",
  "django_htmx",
  # "django-q2",
  "django-social-share",
  "django-storages",
  "django-template-partials",
  "django-unfold",
  "dropbox",
  "heroicons[django]",
  "factory_boy",
  "gunicorn",
  "neapolitan",
  "pandas",
  "openpyxl",
  "psycopg[binary]",
  "tablib[xlsx]",
  "whitenoise"
]
name = "school_menu"
requires-python = ">= 3.12"
version = "0.3"

[project.optional-dependencies]
dev = [
  "coverage",
  "django-extensions",
  "django-test-plus",
  "djlint",
  "pre-commit",
  "pywatchman",
  "pytest",
  "pytest-cov",
  "pytest-django",
  "pytest-factoryboy",
  "pytest-xdist",
  "ruff"
]

[tool.bandit]
skips = ["B101", "B311"]

[tool.coverage.report]
exclude_also = [
]

[tool.coverage.run]
branch = true
omit = ['*/.venv/*', '*/migrations/*', '*/tests/*', '*/test_*.py', '*/settings/*', '*/wsgi.py', '*/asgi.py', '*/manage.py', '*/core/*', '*/users/*', "school_menu/resources.py", "school_menu/serializers.py"]

[tool.djlint]
ignore = "T002,H006"

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "core.settings.test"
'addopts' = "--nomigrations --cov=. --cov-report html:htmlcov --cov-report term:skip-covered --cov-fail-under 100"
python_files = "test_*.py"
testpaths = ["tests"]

[tool.ruff]
target-version = "py312"

[tool.ruff.lint]
ignore = ["E501", "E741", "F405", "B007"]
select = ["E", "F", "B", "I"]
