[dependency-groups]
dev = [
  "coverage>=7.6.4",
  "django-test-plus>=2.2.4",
  "pre-commit>=4.0.1",
  "pytest-cov>=6.0.0",
  "pytest-django>=4.9.0",
  "pytest-factoryboy>=2.7.0",
  "pytest-xdist>=3.6.1",
  "pytest<=8.3.5",
  "ruff>=0.7.2",
  "djlint>=1.36.2",
  "time-machine>=2.17.0",
  "pytz>=2025.2"
]

[project]
dependencies = [
  "crispy-tailwind>=1.0.3",
  "django>=5.0.9",
  "django-allauth>=65.1.0",
  "django-anymail[mailgun]>=12.0",
  "django-browser-reload>=1.17.0",
  "django-cookiebanner>=0.2.8",
  "django-crispy-forms>=2.3",
  "django-dbbackup>=4.2.1",
  "django-debug-toolbar>=4.4.6",
  "django-environ>=0.11.2",
  "django-import-export>=4.2.0",
  "django-htmx>=1.21.0",
  "django-social-share>=2.3.0",
  "django-storages>=1.14.4",
  "django-template-partials>=24.4",
  "dropbox>=12.0.2",
  "heroicons[django]>=2.9.0",
  "factory-boy>=3.3.1",
  "gunicorn>=23.0.0",
  "pandas>=2.2.3",
  "openpyxl>=3.1.5",
  "psycopg[binary]>=3.2.3",
  "tablib[xlsx]>=3.7.0",
  "whitenoise>=6.8.2",
  "neapolitan>=24.7",
  "djangorestframework>=3.15.2",
  "django-pwa>=2.0.1",
  "django-webpush>=0.3.6",
  "django-tailwind-cli==4.2.4",
  "django-q2>=1.8.0",
  "redis>=6.2.0",
  "croniter>=6.0.0",
  "django-active-link>=0.2.2"
]
name = "school_menu"
requires-python = ">= 3.12"
version = "2025.2"

[tool.bandit]
skips = ["B101", "B311"]

[tool.coverage.report]
exclude_also = [
]

[tool.coverage.run]
branch = true
omit = ['*/.venv/*', '*/migrations/*', '*/tests/*', '*/test_*.py', '*/settings/*', '*/wsgi.py', '*/asgi.py', '*/manage.py', '*/core/*', '*/users/*', "school_menu/resources.py", "school_menu/serializers.py", "school_menu/templatetags/custom_tailwind.py"]

[tool.djlint]
ignore = "T002,H006"

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "core.settings"
'addopts' = "--nomigrations --cov=. --cov-report html:htmlcov --cov-report term:skip-covered --cov-fail-under 100"
python_files = "test_*.py"
testpaths = ["tests"]

[tool.ruff]
target-version = "py312"

[tool.ruff.lint]
ignore = ["E501", "E741", "F405", "B007"]
select = ["E", "F", "B", "I"]

[tool.uv]
python-preference = "only-managed"
